--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,3 +21,31 @@ span.wellcome{
     display: block;
     padding: 15px;
 }
+
+.btn-index{
+	height: 220px;
+}
+
+.btn-index-text{
+	padding:  30px;
+	font-size: 36px;
+	font-weight: 900;
+}
+
+.btn-registrar-carro{
+	margin-top: 50px;
+	height: 80px;
+	font-size: 32px;
+	font-weight: 900;
+}
+
+.container-registrar-carro{
+	color: white;
+	background-color: #3498db;
+	font-weight: bold;
+	font-size: 32px;
+}
+
+.registro-carro-label{
+	margin-top: 10px;
+}
