--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,3 +21,33 @@ span.wellcome{
     display: block;
     padding: 15px;
 }
+
+.btn-index{
+ height: 220px;
+}
+
+.btn-index-text{
+ padding:  30px;
+ font-size: 36px;
+ font-weight: 900;
+}
+
+.btn-registrar-carro{
+ margin-top: 50px;
+ height: 80px;
+ font-size: 24px;
+ font-weight: 900;
+}
+
+.container-registrar-carro{
+ font-weight: bold;
+ font-size: 32px;
+}
+
+.registro-carro-label{
+ margin-top: 10px;
+}
+
+.container-registrar-carro input{
+ border: 1px solid black;
+}
